hphp/hack/test/package_v2/package_access/cross_package_generics.php.exp.v2.strict
error: Typing[4472] Cannot access a generic defined in package pkg2 from package pkg1 [1]
-> TFoo is defined in cross_package_generics.php--foo.php [2]
-> cross_package_generics.php--foo.php belongs to package pkg2 by this package override [3]
-> cross_package_generics.php--bar.php is in package pkg1 by this package config assignment [4]
-> And package pkg1 does not include package pkg2 [4]

cross_package_generics.php--bar.php:8:28
    6 | function bar<T>(): void {}
    7 | 
[1] 8 | class Bar1 implements IBar<TFoo> {} // error when package_v2_allow_all_generics_violations is turned off
    9 | class Bar2 implements IFoo<TBar> {} // error
   10 | class Bar3<T as TFoo> {} // ok

cross_package_generics.php--foo.php:4:6
    1 | <?hh
    2 | // package pkg2
[3] 3 | <<file: __PackageOverride('pkg2')>>
[2] 4 | type TFoo = int;
    5 | interface IFoo<T> {}
    6 | class Foo {}

PACKAGES.toml:3:11
    1 | [packages]
    2 | 
[4] 3 | [packages.pkg1]
    4 | include_paths=["//"]
    5 | 

error: Typing[4472] Cannot access a symbol defined in package pkg2 from package pkg1 [1]
-> IFoo is defined in cross_package_generics.php--foo.php [2]
-> cross_package_generics.php--foo.php belongs to package pkg2 by this package override [3]
-> cross_package_generics.php--bar.php is in package pkg1 by this package config assignment [4]
-> And package pkg1 does not include package pkg2 [4]

cross_package_generics.php--bar.php:9:23
    7 | 
    8 | class Bar1 implements IBar<TFoo> {} // error when package_v2_allow_all_generics_violations is turned off
[1] 9 | class Bar2 implements IFoo<TBar> {} // error
   10 | class Bar3<T as TFoo> {} // ok
   11 | class Bar4<T as Foo> {} // ok

cross_package_generics.php--foo.php:5:11
    1 | <?hh
    2 | // package pkg2
[3] 3 | <<file: __PackageOverride('pkg2')>>
    4 | type TFoo = int;
[2] 5 | interface IFoo<T> {}
    6 | class Foo {}

PACKAGES.toml:3:11
    1 | [packages]
    2 | 
[4] 3 | [packages.pkg1]
    4 | include_paths=["//"]
    5 | 

error: Typing[4472] Cannot access a generic defined in package pkg2 from package pkg1 [1]
-> TFoo is defined in cross_package_generics.php--foo.php [2]
-> cross_package_generics.php--foo.php belongs to package pkg2 by this package override [3]
-> cross_package_generics.php--bar.php is in package pkg1 by this package config assignment [4]
-> And package pkg1 does not include package pkg2 [4]

cross_package_generics.php--bar.php:15:18
    13 | function test(mixed $x): void {
    14 |     // both error when package_v2_allow_all_generics_violations is turned off
[1] 15 |     $_ = new Bar<TFoo>();
    16 |     bar<TFoo>();
    17 | }

cross_package_generics.php--foo.php:4:6
     1 | <?hh
     2 | // package pkg2
[3]  3 | <<file: __PackageOverride('pkg2')>>
[2]  4 | type TFoo = int;
     5 | interface IFoo<T> {}
     6 | class Foo {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access a generic defined in package pkg2 from package pkg1 [1]
-> TFoo is defined in cross_package_generics.php--foo.php [2]
-> cross_package_generics.php--foo.php belongs to package pkg2 by this package override [3]
-> cross_package_generics.php--bar.php is in package pkg1 by this package config assignment [4]
-> And package pkg1 does not include package pkg2 [4]

cross_package_generics.php--bar.php:16:9
    14 |     // both error when package_v2_allow_all_generics_violations is turned off
    15 |     $_ = new Bar<TFoo>();
[1] 16 |     bar<TFoo>();
    17 | }

cross_package_generics.php--foo.php:4:6
     1 | <?hh
     2 | // package pkg2
[3]  3 | <<file: __PackageOverride('pkg2')>>
[2]  4 | type TFoo = int;
     5 | interface IFoo<T> {}
     6 | class Foo {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

4 errors found
